--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+
 body,h2{font-family:"Raleway",Arial, sans-serif}
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
 </style>
 <body>
   <script src="../js/script.js"></script>
@@ -38,22 +38,18 @@ body,h2{font-family:"Raleway",Arial, sans-serif}
         <p class="w3-center">Bienvenue sur le site de l'extrême.<br> Le site à était crééer pour présenter au public des sports qui ne sont pas connus par le public et qui le sont, vous aurez la possibilité de présenter vos vidéos et vos photos aux autres utilisateurs du site afin de montrer le sport que vous pratiquez et de le présenter.</p>
         </div>
     
-          <div class=" w3-content w3-display-container" style="max-width:800px">
-              <img class="mySlides" src="skate.jpg" style="width:100%; display:block;">
-              <img class="mySlides" src="ski.jpg" style="width:100%; display:none;">
-              <img class="mySlides" src="snowboard.jpg" style="width:100%; display:none;">
-              <img class="mySlides" src="vtt.jpg" style="width:100%; display:none;">
-              <img class="mySlides" src="bmx.jpg" style="width:100%; display:none;">
-          <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-            <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-            <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+          <div class="w3-content w3-section" style="max-width:800px">
+            <img class="mySlides" src="ski.jpg" style="width:100%">
+              <img class="mySlides" src="skate.jpg" style="width:100%">
+                <img class="mySlides" src="bmx.jpg" style="width:100%">
+                  <img class="mySlides" src="vtt.jpg" style="width: 100%">
           </div>
-        </div>
 
 
+    <div class="w3-container w3-margin-top w3-padding-24"></div>
 
 <!-- Footer -->
-<footer class="w3-container w3-margin-bottom w3-padding-24 w3-black w3-center w3-large">
+<footer class="w3-container w3-margin-top w3-padding-24 w3-black w3-center w3-large">
 <p>Powered by <a href="https://www.w3schools.com/default.asp">W3.css</a></p>
   <p>© Copyright 30/03/2017 DEBORD Guillaume</p>
 </footer>
